Add commas to episode number

--- a/notebooks/blackjack.ipynb
+++ b/notebooks/blackjack.ipynb
@@ -124,19 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running 10000000 of constant alpha montecarlo episodes with epsilon 0.1 and alpha 0.0002.\n"
+      "Running 10,000,000 episodes of constant alpha montecarlo episodes with epsilon 0.1 and alpha 0.0002.\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Running {episode_number} of constant alpha montecarlo episodes with epsilon {epsilon} and alpha {alpha}.\")"
+    "print(f\"Running {episode_number:,} episodes of constant alpha montecarlo episodes with epsilon {epsilon} and alpha {alpha}.\")"
    ]
   },
   {
